<?xml version="1.0"?>
<package>
  <name>robot_serial</name>
  <version>0.0.0</version>
  <description>Example package for using http://wjwwood.io/serial/ library</description>

  <author email="ehdgus2210@gmail.com">Dong Hyeon Kim</author>

  <maintainer email="ehdgus2210@gmail.com">Dong Hyeon Kim</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>serial</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
